--- a/Data/README
+++ b/Data/README
@@ -1,1 +1,10 @@
-This is the data folder containing the .csv file on PGA Tour data and the Jupyter Notebook with our project check-in.
+This is the data folder containing the .csv file on PGA Tour data, the Jupyter Notebook with our project check-in, and the partially completed data dictionary
+
+| **Field** | **Type** | **Description** |
+| ------ | ------ | ------ |
+| Player Name | Text | Golfer Name |
+| Rounds | Numeric | Number of rounds played during the golf season |
+| Fairway Percentage | Number | Percentage of times a golfer hit the fairway during the golf season |
+| Year | Numeric | Year of Competition |
+| AVG Distance | Numeric | Average driving distance during the golf season |
+| Greens In Regulation (GIR) | Numeric | Percentage of greens in regulation during the golf season* |
